# stardroid-ng

./: .gitignore  AGENTS.md  PROMPT.md  README.md  gradle.properties  settings.gradle.kts  status.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  generate_shaders_h.py  math_utils.h  vulkan_raii.h  vulkan_wrapper.cpp  vulkan_wrapper.h
app/src/main/kotlin/com/stardroid/awakening/: MainActivity.kt
app/src/main/kotlin/com/stardroid/awakening/ar/: CameraPreviewView.kt  CameraSurfaceView.kt
app/src/main/kotlin/com/stardroid/awakening/control/: AstronomerModel.kt  SensorOrientationController.kt
app/src/main/kotlin/com/stardroid/awakening/data/: ConstellationCatalog.kt  MessierCatalog.kt  StarCatalog.kt
app/src/main/kotlin/com/stardroid/awakening/ephemeris/: JulianDate.kt  MoonCalculator.kt  PlanetCalculator.kt  SunCalculator.kt
app/src/main/kotlin/com/stardroid/awakening/layers/: CometLayer.kt  EclipticLayer.kt  GridLayer.kt  HorizonLayer.kt  ISSLayer.kt  LayerManager.kt  MeteorShowerLayer.kt  SkyGradientLayer.kt  SolarSystemLayer.kt  StarOfBethlehemLayer.kt
app/src/main/kotlin/com/stardroid/awakening/math/: Coordinates.kt  LatLong.kt  Matrix3x3.kt  TimeUtils.kt  Vector3.kt
app/src/main/kotlin/com/stardroid/awakening/renderer/: Matrix.kt  Primitive.kt  RendererInterface.kt
app/src/main/kotlin/com/stardroid/awakening/spatial/: HEALPix.kt  SpatialStarIndex.kt
app/src/main/kotlin/com/stardroid/awakening/ui/: CompassOverlay.kt  FpsOverlay.kt  LayerToggleOverlay.kt
app/src/main/kotlin/com/stardroid/awakening/vulkan/: VulkanRenderer.kt  VulkanSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/main/shaders/: triangle.vert
app/src/test/cpp/: CMakeLists.txt  math_utils_test.cpp
datamodel/: build.gradle.kts
datamodel/src/main/fbs/: source.fbs
docs/plans/: 2026-02-03-dynamic-vertex-buffers-design.md  2026-02-03-multiple-primitive-types.md  2026-02-03-rendering-abstraction-phase1.md  2026-02-24-readme-design.md
gradle/: libs.versions.toml
tools/: binary.sh  build.gradle.kts  generate.sh
tools/data/: stars.csv
tools/src/main/kotlin/com/stardroid/awakening/tools/: ConstellationConverter.kt  Main.kt
